# DocaroApp

./: .dvcignore  .env.example  .env.paddleocr.example  .gitattributes  .gitignore  .pre-commit-config.yaml  AUTO_SORT_TEST_REPORT.md  CHANGELOG.md  CONTRIBUTING.md  CUTOVER_READY.md  DEPENDENCIES.md  DEPLOYMENT_LINUX.md  DOCLING_INTEGRATION.md  DOCTYPE_IMPLEMENTATION.md  DPA_TEMPLATE.md  DPI_OPTIMIZATION.md  DocaroApp.spec  EULA.md  IMPLEMENTATION_CANONICALIZER.md  IMPLEMENTATION_CHANGES.md  IMPLEMENTATION_DOC_NUMBER.md  IMPLEMENTATION_ROADMAP.md  IMPLEMENTATION_SUMMARY.md  INTEGRATION_ROADMAP.md  LICENSE  MIGRATION_RUNBOOK.md  ML_TRAINING.md  NEW_GITHUB_REPO_SETUP.md  OPERATIONS_CONTACTS_TEMPLATE.md  PADDLEOCR_ARCHITECTURE.md  PADDLEOCR_INTEGRATION.md  PERFORMANCE_OPTIMIZATIONS.md  PIPELINE.md  PRIVACY.md  PRODUCTION_CHECKLIST.md  PRODUCTION_STATUS.md  QUICKSTART.md  README.md  REVIEW_QUEUE_SETUP.md  SECURITY.md  (+34 more)
.codex_tmp/: app.py.orig  extractor.py.orig  index.html.orig
.codex_tmp2/: app.py.orig  extractor.py.orig  index.html.orig  style.css.orig
.codex_tmp3/: app.py.orig  extractor.py.orig  index.html.orig  style.css.orig
.github/: dependabot.yml
app/: .before_app.py  __init__.py  app.py  desktop_routes.py  pdf_toolkit_routes.py  queue_runtime.py  review_routes.py  runtime_storage.py
config/: supplier_aliases.yaml  supplier_field_aliases.yaml  supplier_profiles.example.json
core/: audit_logger.py  date_scorer.py  doc_number_extractor.py  docling_extractor.py  doctype_classifier.py  document_intelligence.py  extractor.py  llm_assist.py  metrics.py  naming_templates.py  observability.py  pdf_toolkit.py  performance.py  quarantine_manager.py  recent_store.py  review_service.py  runtime_state.py  runtime_store.py  test_docling.py  (+20 more)
(+130 files in other folders)
