[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "docaro"
version = "0.1.0"
description = "Modern Document Pipeline"
authors = [{name = "Gregorfun", email = "gregor@example.com"}]
dependencies = [
    "flask",
    "pdf2image",
    "pytesseract",
    "python-dateutil",
    "pyyaml"
]
requires-python = ">=3.9"

[tool.pytest.ini_options]
testpaths = ["tests", "core"]
python_files = "test_*.py"
addopts = "-v --cov=app --cov=core"

[tool.black]
line-length = 100
target-version = ['py39']
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 100

[tool.ruff]
line-length = 100
target-version = "py39"
